fixed shift of menu tabs in desktop version with overflow

--- a/web-pages/css/news.css
+++ b/web-pages/css/news.css
@@ -185,6 +185,7 @@ nav.open {
 		display: block;
 		border: none;
 		background-color: white;
+		overflow: hidden;
 	}
 	.nav-item {
 		display: inline-block;
